[package]
name = "fil_hierarchical_subnet_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
# FIXME: Pointing to a fork of ref-fvm. This needs to change
# once features are fully implemented.
fvm_sdk = { git = "https://github.com/adlrocha/ref-fvm" }
fvm_shared = { git = "https://github.com/adlrocha/ref-fvm" }
fvm_ipld_blockstore = { git = "https://github.com/adlrocha/ref-fvm" }
fvm_ipld_hamt = { git = "https://github.com/adlrocha/ref-fvm" }
fvm_ipld_encoding = { git = "https://github.com/adlrocha/ref-fvm" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"
num-traits = "0.2.14"
fil_actor_hierarchical_sca = { git = "https://github.com/adlrocha/builtin-actors" }

[dev-dependencies]
# FIXME: Pointing to a fork of ref-fvm. This needs to change
# once features are fully implemented.
fvm = { git = "https://github.com/adlrocha/ref-fvm" }
fvm_integration_tests = { git = "https://github.com/adlrocha/ref-fvm" }
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.35.2"
num-traits = "0.2"
wabt = "0.10.0"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"

[patch.crates-io]
fvm_shared = { path = "../ref-fvm/shared" }
fvm_sdk = { path = "../ref-fvm/sdk" }
fvm_ipld_hamt = { path = "../ref-fvm/ipld/hamt" }
fvm_ipld_amt = { path = "../ref-fvm/ipld/amt" }
fvm_ipld_bitfield = { path = "../ref-fvm/ipld/bitfield"}
fvm_ipld_encoding = { path = "../ref-fvm/ipld/encoding"}
fvm_ipld_blockstore = { path = "../ref-fvm/ipld/blockstore"}

